# decorator-pattern-lesson

./: README.md
BadWeaponSystem/: CMakeLists.txt  Gun.hpp  GunWithLaser.hpp  GunWithSlincerAndLaser.hpp  MachineGun.hpp  Rifle.hpp  Weapon.hpp  main.cpp
BadWeaponSystem/include/: Gun.hpp  GunWithLaser.hpp  GunWithSlincer.hpp  MachineGun.hpp  Rifle.hpp  Weapon.hpp
BadWeaponSystem/src/: Gun.cpp  MachineGun.cpp  Rifle.cpp  Weapon.cpp
GoodWeaponSystem/: CMakeLists.txt  Gun.hpp  Laser.hpp  Weapon.hpp  WeaponDecorator.hpp  main.cpp
GoodWeaponSystem/include/: Gun.hpp  Laser.hpp  MachineGun.hpp  Slincer.hpp  Weapon.hpp  WeaponDecorator.hpp
GoodWeaponSystem/src/: Gun.cpp  MachineGun.cpp  Weapon.cpp
Homework/CoffeShopSystem/: CMakeLists.txt  main.cpp
Homework/CoffeShopSystem/include/: Americana.hpp  AmericanaWithMilk.hpp  AmericanaWithSoy.hpp  AmericanaWithWhip.hpp  Coffe.hpp  Decaf.hpp  Espresso.hpp
Homework/CoffeShopSystem/src/: Americana.cpp  Decaf.cpp  Espresso.cpp
docs/: BadWeaponSystem.puml  GoodWeaponSystem.puml  decorator-schema.puml
